# oznprak

./: CMakeLists.txt  Logic.cpp  Logic.hpp  Matrix.cpp  Matrix.hpp  README.md  main.cpp
nn/: ActivationFunction.hpp  Layer.cpp  Layer.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Relu.cpp  Relu.hpp  Sigmoid.cpp  Sigmoid.hpp  Softmax.cpp  Softmax.hpp
ui/: DrawingArea.cpp  DrawingArea.hpp  DrawingScene.cpp  DrawingScene.hpp  Window.cpp  Window.hpp
